# lingcode_window_IDE

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LINGCODE-CHANGES.md  MAC-PARITY-IMPLEMENTATION-PLAN.md  MAC-PARITY-STATUS.md  README.md  RELEASE_NOTES_v0.1.1.md  REMOTE-CODING-PLAN.md  WINDOWS-BUILD.md  build_lingcode.bat  check_lingcode.bat
.cargo/: config.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: 10_bug_report.yml  11_crash_report.yml  config.yml
.github/workflows/: lingcode-release.yml
.github/workflows-disabled/: README.md
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json
crates/collab/: README.md
crates/eval_cli/: README.md
crates/explorer_command_injector/: AppxManifest-Nightly.xml  AppxManifest-Preview.xml  AppxManifest.xml
crates/extension_api/: README.md
crates/gpui/: README.md
crates/icons/: README.md
crates/inspector_ui/: README.md
crates/lingcode_android/: Cargo.toml
crates/lingcode_android/src/: lingcode_android.rs
crates/lingcode_cloud/: Cargo.toml
crates/lingcode_cloud/src/: lingcode_cloud.rs
crates/lingcode_install/: Cargo.toml
crates/lingcode_install/src/: lingcode_install.rs
crates/lingcode_remote/: Cargo.toml
crates/lingcode_remote/src/: lingcode_remote.rs
crates/lingcode_templates/: Cargo.toml
crates/lingcode_templates/src/: lingcode_templates.rs
crates/lingcode_templates/templates/android/: .gitignore  README.md  settings.gradle.kts
crates/lingcode_templates/templates/android/app/: build.gradle.kts
crates/lingcode_templates/templates/android/app/src/main/: AndroidManifest.xml
crates/lingcode_templates/templates/android/app/src/main/kotlin/dev/lingcode/app/: MainActivity.kt
crates/lingcode_templates/templates/android/app/src/main/res/layout/: activity_main.xml
crates/lingcode_templates/templates/android/app/src/main/res/values/: strings.xml
crates/lingcode_templates/templates/node-ts/: README.md  package.json
crates/lingcode_templates/templates/node-ts/src/: index.ts
crates/lingcode_templates/templates/python/: README.md  main.py  requirements.txt
crates/lingcode_templates/templates/python/tests/: test_main.py
crates/lingcode_templates/templates/web-game/: README.md  game.js  index.html  style.css
extensions/: README.md
legal/: privacy-policy.md  subprocessors.md  terms.md  third-party-terms.md
script/: bundle-linux  bundle-linux-packages  bundle-windows.ps1
(+134 files in other folders)
