[package]
name = "lingcode_android"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lingcode_android.rs"
doctest = false

[dependencies]
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
util.workspace = true
which.workspace = true
workspace.workspace = true
