[package]
name = "lingcode_cloud"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lingcode_cloud.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
menu.workspace = true
serde.workspace = true
serde_json.workspace = true
task.workspace = true
terminal_view.workspace = true
ui.workspace = true
util.workspace = true
which.workspace = true
workspace.workspace = true
