[package]
name = "lingcode_templates"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lingcode_templates.rs"
doctest = false

[dependencies]
anyhow.workspace = true
fs.workspace = true
gpui.workspace = true
workspace.workspace = true
